--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,12 +5,11 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 a {
