--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -16,3 +16,17 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: #bdbdbd;
+}
