--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -18,8 +18,9 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
   height: 12px;
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-track {
@@ -28,5 +29,6 @@ a {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background: #bdbdbd;
+  background: #ffcc21;
+  border-radius: 4px;
 }
