--- a/src/features/desktop/columnPage/ColumnPage.scss
+++ b/src/features/desktop/columnPage/ColumnPage.scss
@@ -1,5 +1,6 @@
 .page-container {
   width: 100%;
+  height: calc(100% - 128px);
   display: flex;
   flex-direction: column;
   justify-content: center;
